src/App.css
:root {
  --clr-primary-000: transparent;
  --clr-primary-100: #ffff;
  --clr-primary-200: #163761be;
  --clr-primary-300: #236f8a;
  --clr-primary-500: #58a7f7;
  --clr-primary-900: black;

  --clr-neutral-100: white;
  --clr-neutral-200: #929191;

  --ff-primary: "Futura", sans-serif;
  --ff-secondary: "Source Sans Pro", Arial, sans-serif;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

/* typography */

html {
  font-size: 100%;
}

body {
  font-size: 1rem;
  font-weight: 300;
  font-family: var(--ff-primary);
  /* color: var(--clr-neutral-100); */
  color: var(--clr-primary-100);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  line-height: 1.5;
}

h3 {
  font-size: 1rem;
  font-weight: 700;
  font-family: var(--ff-primary);
  text-transform: uppercase;
}

#footer {
  font-family: var(--ff-primary);
  font-size: 0.5rem;
  color: var(--clr-neutral-100);
  font-weight: 700;
  letter-spacing: 0.1rem;
  text-align: center;
}
#footer > h3 {
  font-size: 0.6rem;
}

#copyright {
  color: var(--clr-neutral-100);
  font-family: var(--ff-primary);
  font-size: 0.8rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
  line-height: 1.5;
}

button {
  font-family: var(--ff-primary);
  color: var(--clr-neutral-100);
  font-weight: 900;
  letter-spacing: 0.1rem;
  background-color: #63a8c7;
}

.text-center {
  text-align: center;
}

@media screen and (min-width: 420px) {
  html {
    font-size: 90%;
  }
}

@media screen and (min-width: 1020px) {
  html {
    font-size: 120%;
  }
}
@media screen and (min-width: 1020px) and (max-height: 780px) {
  html {
    font-size: 90%;
  }
}
@media screen and (min-width: 2200px) {
  html {
    font-size: 150%;
  }
}

/* general */

@media screen and (max-width: 480px) {
  html,
  body {
    min-width: 320px;
  }
}

html,
body,
#root {
  height: 100%;
}

#root {
  display: flex;
  flex-direction: column;
}

body,
h2,
h3,
p {
  margin: 0;
}

h2,
p {
  margin-bottom: 1rem;
}

img {
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

ol,
ul {
  list-style: none;
  margin: 0;
}

.flex {
  display: flex;
}
.flex * {
  padding: 0.25rem;
}

.padding-4rem {
  padding: 4rem;
}

.margin-inline-1rem {
  margin-inline: 0.5rem;
}

#container {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  margin-inline: auto;
}
a {
  color: inherit;
}

/* layout */

.split {
  display: flex;
  flex-direction: column;
  width: 100%;
}

@media (min-width: 1024px) {
  .split {
    display: grid;
    grid-template-columns: 2fr 1fr;
  }
}

/* button */
.button {
  background-color: transparent;
  cursor: pointer;
  display: inline-block;
  height: 1.5rem;
  font-size: 0.6rem;
  padding: 0 1rem;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  white-space: nowrap;
  border: 1px solid var(--clr-neutral-100);
  margin: 0.5rem;
}

.button.small {
  font-size: 0.5rem;
  height: 1.6rem;
  line-height: 1.5rem;
  padding: 0 0.4rem;
}

.button.large {
  font-size: 0.6rem;
  height: 1.8rem;
  line-height: 1.5rem;
  padding: 0 0.8rem;
}

.modal-button {
  position: absolute;
  top: 0;
  right: 0;
  margin: 1rem;
}

.button:hover {
  border: none;
}
.button a {
  display: block;
}
a {
  display: block;
}

/* modal */
.ReactModalPortal ul,
.ReactModalPortal ul li {
  border-left: 0;
  margin: 1rem 0 0 0;
  padding-left: 0;
  display: block;
}
.ReactModalPortal ul {
  margin: 3rem;
}

